pages width on mobile fixed

--- a/components/NavBar/NavBar.module.scss
+++ b/components/NavBar/NavBar.module.scss
@@ -118,7 +118,10 @@
             bottom: 0;
             height: 30%;
           }
-          
+
+          .lastItem{
+            padding-bottom: 45px;
+          }
           
         }
 
