--- a/components/Pages/Pages.module.scss
+++ b/components/Pages/Pages.module.scss
@@ -47,7 +47,7 @@
                 flex-shrink: 0;
                 overflow-wrap:normal;
                 transition: transform 0.3s ease-out;
-                display: flex; flex-wrap: wrap; justify-content: center; row-gap: 1.3rem; column-gap: 1rem;
+                display: flex; flex-wrap: wrap; justify-content: center; row-gap: 1.2rem; column-gap: 1rem;
             }
         }
 
